Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-5738

Compiler build fails on Mac

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.20.0
    • Java - Compiler
    • None
    • Patch Available
    • Patch

    Description

      Building 0.19.0 on Mac OS Ventura 13.6 (Darwin J59JPHTWW7 22.6.0 Darwin Kernel Version 22.6.0: Fri Sep 15 13:41:28 PDT 2023; root:xnu-8796.141.3.700.8~1/RELEASE_ARM64_T6000 arm64) yields this error:

      src/thrift/generate/t_java_generator.cc:5759:9: error: variable 'j' set but not used [-Werror,-Wunused-but-set-variable]
          int j = 0;
              ^
      1 error generated.
      make[1]: *** [src/thrift/generate/thrift-t_java_generator.o] Error 1
      
      % gcc --version
      Apple clang version 15.0.0 (clang-1500.0.40.1)
      Target: arm64-apple-darwin22.6.0
      Thread model: posix
      InstalledDir: /Library/Developer/CommandLineTools/usr/bin
      

      Attachments

        1. remove-j-0.19.0.patch
          0.9 kB
          Jeff Alder

        Issue Links

          Activity

            People

              jeffalder Jeff Alder
              jeffalder Jeff Alder
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 20m
                  20m