THRIFT-5738: Remove unused variable